@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/antlr
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/antlr/ChangeLog,v 1.74 2009/04/26 23:54:25 ranger Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/antlr/ChangeLog,v 1.75 2009/05/01 18:52:33 betelgeuse Exp $
+
+*antlr-3.1.3-r2 (01 May 2009)
+
+  01 May 2009; Petteri Räty <betelgeuse@gentoo.org> +antlr-3.1.3-r2.ebuild:
+  Sed in antlr.version to properties file. Python target doesn't work
+  without it being set properly.
 
   26 Apr 2009; Brent Baude <ranger@gentoo.org> antlr-3.1.3-r1.ebuild:
   Marking antlr-3.1.3-r1 ~ppc for bug 264195
